Fully Functional with Fluent NHibernate
Rocking all over the world

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,2 @@
-
-oracle - pdo - poc/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-oracle - pdo - poc/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-oracle - pdo - poc/obj/Debug/oracle - pdo - poc.csproj.FileListAbsolute.txt
-oracle - pdo - poc/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-oracle - pdo - poc/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
-oracle - pdo - poc/bin/Debug/oracle - pdo - poc.vshost.exe.manifest
-oracle - pdo - poc/bin/Debug/oracle - pdo - poc.vshost.exe.config
-oracle - pdo - poc/bin/Debug/oracle - pdo - poc.vshost.exe
-oracle - pdo - poc/bin/Debug/oracle - pdo - poc.exe.config
-oracle - pdo - poc/bin/Debug/oracle - pdo - poc.exe
-oracle - pdo - poc/bin/Debug/Oracle.ManagedDataAccess.dll
-oracle - pdo - poc/obj/Debug/oracle - pdo - poc.pdb
-oracle - pdo - poc/obj/Debug/oracle - pdo - poc.csprojResolveAssemblyReference.cache
+oracle - pdo - poc/bin/
+oracle - pdo - poc/obj/
